# openbox-quick-start

./: .gitignore  README.md  justfile  pyproject.toml  worker.py
activities/: __init__.py  fetch_weather_activity.py  weather.py  write_database_activity.py
alembic/: env.py
db/: __init__.py  engine.py  models.py  schemas.py
starters/: weather.py
workflows/: __init__.py  weather.py
